[project]
name = "gym_kuhn_poker"
version = "0.2.0"
description = "An OpenAI Gymnasium environment implementation of Kuhn Poker"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Magniquick"}
]
dependencies = [
    "gymnasium>=1.2.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--tb=long"
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
